2001-11-07  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_intersect.c (art_svp_intersect_horiz): Fixed important
	logic bug, failing to test crossings of neighbors when inserting
	horizontal lines. Also changed printf to art_dprint.

	* art_misc.c (art_dprint): Added function for debug printing,
	so verbose intersector output doesn't have to go through printf.

	* art_misc.h (ART_USE_NEW_INTERSECTOR): I've turned this on
	now, as the new intersector certainly seems to be performing
	better than the old one now.

2001-10-31  Anders Carlsson  <andersca@gnu.org>

	* Release 2.3.7

2001-10-15  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_intersect.c (art_svp_intersect_horiz): Minor
	logic fix so that horiz segments successfully cross
	zero length segments in the active list.

	(art_svp_intersect_test_cross): Flags indicating whether to
	do add_point (potentially breaking neighbors) to left and
	to right.

	(art_svp_intersect_insert_cross): Provide ART_BREAK_LEFT and
	ART_BREAK_RIGHT flags to art_svp_intersect_test_cross,
	depending on direction of search.

	(art_svp_intersect_advance_cursor): Provide flags (allow
	both left and right breaking) to test_cross.
	
2001-10-15  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_intersect.c (CHEAP_SANITYCHECK): Added an inexpensive
	sanitycheck to detect multiple insertions of a segment into the
	horiz list.

	(art_svp_writer_rewind_add_point): Avoid breaking lines below
	their bottom point.

	(art_svp_intersect_test_cross): Handle cases correctly where
	intersection point matches y0 of left or right segment. These _do_
	happen in real world examples. Also, do add_point on newly
	inserted intersection point.

2001-10-14  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_intersect.c (art_svp_intersect_add_point): Fixed
	rather subtle logic bug that misplaced insertion point
	when seg argument was NULL.

2001-10-11  Raph Levien  <raph@pixel.artofcode.com>
